# bug_manager

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/bug_manager/accounts/: forms.py  urls.py
src/bug_manager/accounts/templates/: login.html  register.html  update_profile.html
src/bug_manager/accounts/tests/: test_login.py  test_logout.py  test_register.py
src/bug_manager/accounts/views/: login.py  logout.py  register.py  update_profile.py
src/bug_manager/bug_manager/: asgi.py  env.py  settings.py  urls.py  wsgi.py
src/bug_manager/pages/: tests.py  views.py
src/bug_manager/pages/templates/: index.html
src/bug_manager/templates/: base.html
src/bug_manager/tickets/: forms.py  models.py  urls.py
src/bug_manager/tickets/migrations/: 0001_initial.py  0002_alter_ticket_status.py
src/bug_manager/tickets/templates/: ticket_create.html  ticket_delete.html  ticket_detail.html  ticket_list.html  ticket_update.html
src/bug_manager/tickets/tests/: test_ticket_create_view.py  test_ticket_delete_view.py  test_ticket_detail_view.py  test_ticket_list_view.py  test_ticket_model.py  test_ticket_update_view.py
src/bug_manager/tickets/views/: ticket_create_view.py  ticket_delete_view.py  ticket_detail_view.py  ticket_list_view.py  ticket_update_view.py
