[tool.poetry]
name = "bug_manager"
version = "0.1.0"
description = ""
authors = ["Henry Iwanejko <H.Iwanejko@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
flake8 = "^4.0.1"
dependency-check = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
